--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "leaflet": "^1.9.4",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
